--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "@prisma/client": "^6.6.0",
     "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
-    "cookie": "^0.6.0",
+    "cookie": "^1.0.2",
     "i18next": "^25.0.1",
     "jsonwebtoken": "^9.0.2",
-    "next": "14.0.4",
+    "next": "^14.2.28",
     "next-auth": "^4.24.5",
     "next-i18next": "^15.4.2",
     "react": "^18.2.0",
